[package]
name = "ldap3_proto"
version = "0.2.3"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"

description = "LDAP Protocol bindings for Tokio"
repository = "https://github.com/kanidm/ldap3_server"
readme = "README.md"
keywords = ["ldap", "protocol", "authentication", "chaos"]
categories = ["authentication"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["strict"]
strict = []

[dependencies]
lber = "^0.3.0"
tokio-util = { version = "^0.7.1", features = ["codec"] }
bytes = "^1.1.0"
tracing = "^0.1.34"

[dev-dependencies]
tracing-subscriber = "^0.3.11"

futures-util = "^0.3.21"
tokio = { version = "^1.17.0", features = ["rt-multi-thread", "io-util", "net", "signal", "macros"] }
futures = "^0.3.21"

tokio-openssl = "^0.6.3"
openssl = "^0.10.38"
