[profile.release]
debug = true
lto = "thin"

[workspace]
resolver = "2"
members = ["proto", "client", "cli"]


[workspace.package]
version = "0.6.2"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.74"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/ldap3/"
repository = "https://github.com/kanidm/ldap3/"
keywords = ["ldap", "protocol", "authentication", "chaos"]

[workspace.dependencies]
ldap3_client = { path = "./client", version = "=0.6.2" }
ldap3_proto = { path = "./proto", version = "=0.6.2" }

base64 = "0.21"
bytes = "^1.1.0"
clap = "^3.2"
clap_complete = "^3.2.3"
futures = "^0.3.21"
futures-util = "^0.3.21"
lber = "^0.4.0"
# Must match lber
nom = "7"
peg = "0.8.1"
ron = "^0.8.0"
rpassword = "7.0.0"
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
serde_test = "^1.0.56"
serde_with = "3.9.0"
thiserror = "1.0"
tokio = "^1.17.0"
tokio-util = "^0.7.1"
rustls = "0.23.36"
tokio-rustls = { version = "0.26.2" }
rustls-platform-verifier = "0.6.2"
tracing = { version = "^0.1.34", features = ["attributes"] }
tracing-subscriber = "^0.3.11"
url = "^2.2.2"
uuid = "^1.1.2"
sspi = "^0.11.1"
