[package]
name = "ldap3_cli"
description = "LDAP Command Line Tools"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

default-run = "ldap"

[lib]
name = "ldap3_cli_common"
path = "src/lib.rs"

[[bin]]
name = "ldap"
path = "src/ldap.rs"

[[bin]]
name = "cldap"
path = "src/cldap.rs"

[[bin]]
name = "ldap_debug"
path = "src/ldap_debug.rs"

[dependencies]
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
ldap3_client.workspace = true
ron.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true


[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
url.workspace = true
