[package]
name = "ldap3_client"
description = "LDAP Client Library for Tokio"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["strict"]
strict = ["ldap3_proto/strict"]

[lib]
name = "ldap3_client"
path = "src/lib.rs"

[dependencies]
base64.workspace = true
base64urlsafedata.workspace = true
futures-util = { workspace = true, features = ["sink"] }
ldap3_proto.workspace = true
serde= { workspace = true, features = ["derive"] }
openssl.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "io-util", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-openssl.workspace = true
tracing.workspace = true
url.workspace = true
uuid= {workspace = true, features = ["serde"] }


